# rox-engine

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
Dependencies/: CMakeLists.txt
Dependencies/glad/src/: glad.c
Engine/: CMakeLists.txt  rox_engine.cpp  rox_engine.h
Engine/RoxCore/: CMakeLists.txt
Engine/RoxCore/RoxApp/: CMakeLists.txt  IRoxPlatformAdapter.h  RoxApp.cpp  RoxApp.h  RoxAppInternal.h  RoxPlatformAdapter.h  RoxPlatformFactory.cpp  RoxPlatformFactory.h  RoxWindowsAdapter.cpp  RoxWindowsAdapter.h  app.mm
Engine/RoxCore/RoxApp - Copy/: CMakeLists.txt  RoxApp.cpp
Engine/RoxCore/RoxFormats/: CMakeLists.txt  RoxAnim.cpp  RoxAnim.h  RoxDirectDrawSurface.cpp  RoxDirectDrawSurface.h  RoxKhronosTexture.cpp  RoxMathExprParser.cpp  RoxMesh.cpp  RoxMesh.h  RoxMeta.cpp  RoxStringConvert.cpp  RoxStringConvert.h  RoxTextParser.cpp  RoxTextParser.h  RoxTruevisionGraphicsAdapter.cpp  RoxTruevisionGraphicsAdapter.h
Engine/RoxCore/RoxInput/: CMakeLists.txt  RoxButtonCodes.h  RoxInput.cpp  RoxInput.h
Engine/RoxCore/RoxLogger/: CMakeLists.txt  RoxCompositeLogger.cpp  RoxCompositeLogger.h  RoxLogger.cpp  RoxLogger.h  RoxOutputStream.cpp  RoxOutputStream.h  RoxPlainFileLog.cpp  RoxPlainFileLog.h  RoxStdoutLog.cpp  RoxStdoutLog.h  RoxWarning.cpp  RoxWarning.h  RoxWindbgLogger.cpp  RoxWindbgLogger.h
Engine/RoxCore/RoxMath/: CMakeLists.txt  RoxAngle.h  RoxFrustum.cpp  RoxMatrix.h  RoxQuadtree.cpp
Engine/RoxCore/RoxMemory/: CMakeLists.txt  RoxIndexedMap.h  RoxLru.h  RoxMemory.h  RoxMemoryReader.h  RoxMutex.cpp  RoxMutex.h  RoxNonCopyable.h  RoxTagList.h  RoxTmpBuffers.h
Engine/RoxCore/RoxResources/: CMakeLists.txt  RoxCompositeResourcesProvider.cpp  RoxCompositeResourcesProvider.h  RoxFileResourcesProvider.cpp  RoxFileResourcesProvider.h  RoxMemoryResourcesProvider.cpp  RoxMemoryResourcesProvider.h  RoxResources.cpp  RoxResources.h  RoxSharedResources.h
Engine/RoxCore/RoxSystem/: CMakeLists.txt  RoxApp.h  RoxButtonCodes.h  RoxShadersCacheprovider.cpp  RoxShadersCacheprovider.h  RoxSystem.cpp  RoxSystem.h
Engine/RoxFormats/: RoxAnim.cpp  RoxAnim.h  RoxDirectDrawSurface.cpp  RoxKhronosTexture.cpp  RoxKhronosTexture.h  RoxMathExprParser.h  RoxMesh.cpp  RoxMesh.h  RoxMeta.h  RoxStringConvert.cpp  RoxStringConvert.h  RoxTextParser.cpp  RoxTextParser.h  RoxTruevisionGraphicsAdapter.cpp  RoxTruevisionGraphicsAdapter.h  ktx.h
Engine/RoxGraphics/: CMakeLists.txt
Engine/RoxGraphics/RoxFormats/: CMakeLists.txt  RoxAnim.h  RoxDirectDrawSurface.h  RoxMathExprParser.cpp  RoxMesh.cpp  RoxMeta.cpp  RoxMeta.h
Engine/RoxGraphics/RoxLogger/: CMakeLists.txt  RoxAndroidLog.cpp  RoxCompositeLogger.cpp  RoxCompositeLogger.h  RoxOutputStream.cpp  RoxOutputStream.h  RoxPlainFileLog.cpp  RoxWarning.cpp  RoxWindbgLogger.h
Engine/RoxGraphics/RoxMath/: CMakeLists.txt  RoxQuaternion.cpp
Engine/RoxGraphics/RoxMemory/: CMakeLists.txt  RoxAlignAlloc.h  RoxInvalidObject.h  RoxLru.h  RoxMutex.cpp  RoxTileMap.h  tmp_buffer.cpp
Engine/RoxLogger/: RoxAndroidLog.h  RoxLogger.cpp  RoxLogger.h  RoxPlainFileLog.h  RoxStdoutLog.cpp  RoxWarning.h
Engine/RoxMath/: CMakeLists.txt  RoxAabb.cpp  RoxAabb.h  RoxAngle.h  RoxBezier.cpp  RoxBezier.h  RoxConstants.cpp  RoxConstants.h  RoxFrustum.h  RoxMatrix.cpp  RoxQuadtree.h  RoxQuaternion.cpp  RoxQuaternion.h  RoxScalar.h  RoxSimd.h  RoxVector.h
Engine/RoxMemory/: RoxLru.h  RoxMemory.cpp  RoxMemoryReader.h  RoxMemory_reader.h  RoxMemory_writer.h  RoxMutex.h  RoxNonCopyable.h  RoxOptional.h  RoxPool.h  RoxSharedPtr.h  RoxTagList.h  memory.h
Engine/RoxRender/: RoxAnimation.cpp  RoxAnimation.h  RoxBitmap.cpp  RoxBitmap.h  RoxDebugDraw.cpp  RoxDebugDraw.h  RoxFbo.cpp  RoxFbo.h  RoxRender.cpp  RoxRender.h  RoxRenderApi.h  RoxRenderBuffered.cpp  RoxRenderBuffered.h  RoxRenderDirectx11.cpp  RoxRenderDirectx11.h  RoxRenderMetal.cpp  RoxRenderOpengl.cpp  RoxRenderOpengl.h  RoxRenderOpenglExt.h  RoxScreenQuad.h  RoxShader.cpp  RoxShader.h  RoxShaderCodeParser.cpp  RoxShaderCodeParser.h  RoxSkeleton.cpp  RoxSkeleton.h  RoxStatistics.cpp  RoxStatistics.h  RoxTexture.cpp  RoxTexture.h  RoxTransform.cpp  RoxTransform.h  RoxVbo.cpp  RoxVbo.h  render_api.h  render_buffered.cpp  render_directx11.h  shader_code_parser.cpp  skeleton.cpp  texture.cpp
Engine/RoxResources/: CMakeLists.txt  RoxApkResourcesProvider.cpp  RoxApkResourcesProvider.h  RoxCompositeResourcesProvider.cpp  RoxCompositeResourcesProvider.h  RoxFileResourcesProvider.cpp  RoxFileResourcesProvider.h  RoxMemoryResourcesProvider.cpp  RoxMemoryResourcesProvider.h  RoxResources.cpp  RoxResources.h  RoxSharedResources.h  shared_resources.h
Engine/RoxScene/: animation.cpp  animation.h  camera.cpp  camera.h  location.cpp  material.cpp  mesh.cpp  particles.cpp  particles.h  postprocess.cpp  proxy.h  scene.cpp  shader.cpp  shared_resources.h  texture.cpp  texture.h  transform.cpp  transform.h
Engine/RoxScene__err/: RoxAnimation.cpp  RoxAnimation.h  RoxCamera.cpp  RoxCamera.h  RoxLocation.cpp  RoxLocation.h  RoxProxy.h  RoxScene.cpp  RoxScene.h  RoxSharedResources.h  RoxTags.h  RoxTexture.h  RoxTransform.cpp  RoxTransform.h  material.cpp  material.h  shader.cpp  shader.h  texture.cpp
Engine/RoxSystem/: RoxApp.cpp  RoxShadersCacheprovider.cpp  RoxShadersCacheprovider.h  RoxSystem.cpp  system.mm
Engine/formats/: CMakeLists.txt  text_parser.cpp
Engine/logger/: CMakeLists.txt  android_log.cpp  android_log.h  composite_log.cpp  composite_log.h  log.cpp  logger.cpp  output_stream.cpp  plain_file_log.h  stdout_log.h  warning.cpp  warning.h  windbg_log.cpp  windbg_log.h
Engine/math/: CMakeLists.txt
Engine/memory/: CMakeLists.txt  memory.h
Engine/render/: CMakeLists.txt  render.cpp  render.h  shader_code_parser.cpp
Engine/resources/: CMakeLists.txt  file_resources_provider.cpp
Engine/scene/: CMakeLists.txt  mesh.cpp  scene.h  shader.cpp
Engine/system/: CMakeLists.txt  app.cpp  app.h  app.mm  app_internal.h  button_codes.h  shaders_cache_provider.cpp  shaders_cache_provider.h  system.cpp  system.h
Engine/tools/: CMakeLists.txt
Engine/ui/: CMakeLists.txt
cube_test/: cube_test.vcxproj
(+110 files in other folders)
